# bambu-spoolman

./: .Dockerignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  lefthook.yml  pyproject.toml  wsgi.py
.github/workflows/: publish.yaml  release.yaml
bambu_spoolman/: __init__.py  bambu_ftp.py  bambu_mqtt.py  daemon.py  flask.py  settings.py  spoolman.py
bambu_spoolman/broker/: automatic_spool_switch.py  checkpoint.py  command.py  commands.py  filament_usage_tracker.py  server.py
bambu_spoolman/debug/: replay.py
bambu_spoolman/gcode/: bambu.py  parser.py
bambu_spoolman/grpc/: server.py
bambu_spoolman/routes/: __init__.py
conf/: nginx.conf  supervisord.conf
dev/: docker-compose.yaml
frontend/: biome.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/app/: layout.tsx  manifest.ts  page.tsx
frontend/app/external-spool/: page.tsx
frontend/components/: AmsComponent.tsx  AmsTray.tsx  SpoolChip.tsx
frontend/components/tray-config/: CurrentSpool.tsx  SpoolRadioGroup.tsx  TrayConfigForm.tsx  actions.ts
frontend/components/ui/: button.tsx  radio-group.tsx
frontend/lib/: features.ts  printer.ts  settings.ts  spool.ts  types.ts
frontend/lib/client/: settings.ts
frontend/lib/grpc/: index.ts
frontend/lib/hooks/: useCameraAvailable.ts
frontend/public/: sw.js
frontend/src/: App.tsx  types.ts
frontend/src/components/: AmsConfiguration.module.css  AmsConfiguration.tsx  AmsSpoolChip.tsx  Button.tsx  Configuration.tsx  ExternalSpoolConfiguration.tsx  Input.module.css  Input.tsx  Popup.tsx  PrinterStatus.tsx  SpoolsSelect.tsx  index.tsx
frontend/src/hooks/: Spools.ts  debounce.ts  spool.ts  status.ts  useSettings.ts
frontend/src/stores/: popupStore.ts  settings.ts  spoolChangeStore.ts
scripts/: update_protos.sh
(+9 files in other folders)
