[tool.poetry]
name = "bambu-spoolman"
version = "0.1.0"
description = ""
authors = ["mrkirby153 <mr.austinwhyte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
loguru = "^0.7.3"
requests = "^2.32.3"
flask = "^3.1.0"

[tool.poetry.scripts]
bambu-spoolman = "bambu_spoolman:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
